--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,15 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
+  #- title: "Quick-Start Guide"
+  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "About"
+    url: /about/
+  - title: "Categories"
+    url: /categories/
+  - title: "splash-page"
+    url: /splash-page
+  - title: "External Link"
+    url: https://google.com
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
