--- a/_config.yml
+++ b/_config.yml
@@ -292,3 +292,13 @@ defaults:
       comments: true # true
       share: true
       related: true
+
+defaults:
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
+
