--- a/_config.yml
+++ b/_config.yml
@@ -296,7 +296,7 @@ defaults:
 defaults:
   # _pages
   - scope:
-      path: "docs/_pages"
+      path: "_pages"
       type: pages
     values:
       layout: single
