--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,10 +4,10 @@ main:
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
-  - title: "Categories"
-    url: /categories/
-  - title: "splash-page"
-    url: /splash-page
+  #- title: "Categories"
+  #  url: /categories/
+  #- title: "splash-page"
+  #  url: /splash-page
   - title: "External Link"
     url: https://google.com
   # - title: "Sample Posts"
