modified:   _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -294,7 +294,7 @@ defaults:
       related: true
   # _pages
   - scope:
-      path: "docs/_pages"
+      path: ""
       type: pages
     values:
       layout: single
