--- a/_config.yml
+++ b/_config.yml
@@ -308,4 +308,10 @@ defaults:
       share: true
       related: true
       classes: wide
-
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
