--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   #- title: "Quick-Start Guide"
   #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  #- title: "About"
-  #  url: /about/
+  - title: "About"
+    url: /about/
   - title: "Categories"
     url: /categories/
   - title: "Project"
@@ -12,9 +12,5 @@ main:
     url: /practice/
   #- title: "External Link"
   #  url: https://google.com
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
   # - title: "Sitemap"
   #   url: /sitemap/
